# uu-apa-ass1

./: .gitignore  Makefile  README.md  apa-1.cabal
examples/: example_readme.txt
src/: ParseLang.hs
src/Lang/: AG.ag  Lang.ag  Lang.hs  TreeInstances.hs
src/Parser/: Parser.hs
